load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "stl_set",
    srcs = ["stl_set.cpp"],
    hdrs = [
        "ordered_container.h",
        "stl_set.h",
    ],
)

cc_library(
    name = "trie_int",
    srcs = ["trie_int.cpp"],
    hdrs = [
        "ordered_container.h",
        "trie_int.h"
    ]
)

cc_library(
    name = "dynamic_segment_tree",
    srcs = ["dynamic_segment_tree.cpp"],
    hdrs = [
        "ordered_container.h",
        "dynamic_segment_tree.h"
    ]
)

cc_library(
    name = "boost_set",
    srcs = ["boost_set.cpp"],
    hdrs = [
        "ordered_container.h",
        "boost_set.h"
    ],
    deps = [
        "@boost.container"
    ]
)

cc_binary(
    name = "ordered_containers",
    srcs = ["main.cpp"],
    deps = [
        ":stl_set",
        ":trie_int",
        ":dynamic_segment_tree",
        "@google_benchmark//:benchmark",
        "//src/ordered_containers/generators:generators",
        ":boost_set"
    ],
)
