load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "stl_set",
    srcs = ["stl_set.cpp"],
    hdrs = [
        "ordered_container.h",
        "stl_set.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "trie_int",
    srcs = ["trie_int.cpp"],
    hdrs = [
        "ordered_container.h",
        "trie_int.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dynamic_segment_tree",
    srcs = ["dynamic_segment_tree.cpp"],
    hdrs = [
        "dynamic_segment_tree.h",
        "ordered_container.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "boost_set",
    srcs = ["boost_set.cpp"],
    hdrs = [
        "boost_set.h",
        "ordered_container.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@boost.container",
    ],
)

cc_library(
    name = "ordered_container",
    hdrs = [
        "ordered_container.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "ordered_containers",
    srcs = ["main.cpp"],
    includes = ["."],
    linkopts = ["-Wl,-z,stack-size=67108864"],
    visibility = ["//visibility:public"],
    deps = [
        ":boost_set",
        ":dynamic_segment_tree",
        ":stl_set",
        ":trie_int",
        "//src/ordered_containers/generators",
        "@google_benchmark//:benchmark",
    ],
)
