cc_library(
    name = "sorting_generators",
    srcs = [
        "random_integer_list_generator.cpp",
        "reversed_integer_list_generator.cpp",
        "semi_sorted_integer_list_generator.cpp",
    ],
    hdrs = [
        "integer_list_generator.h",
        "random_integer_list_generator.h",
        "reversed_integer_list_generator.h",
        "semi_sorted_integer_list_generator.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)
